issue with overflow not visible in live server, fixing via pushes

--- a/main.css
+++ b/main.css
@@ -45,7 +45,8 @@ header {
     background-image: url(assets/background.jpg);
     background-position: top center;
     min-height: 20vh;
-    width: 100vw;
+    overflow-x: hidden;
+    width: 100%;
     margin-bottom: 30px;
     display: flex;
     flex-direction: column;
